--- a/2017/2017-03/2017-03-29/source/320x50.css
+++ b/2017/2017-03/2017-03-29/source/320x50.css
@@ -415,27 +415,76 @@
   animation: fadeOut 0.75s ease-in-out 2.75s forwards;
 }
 
-.frame2 {
-  background: url('./images/320x50_frame2.png') no-repeat center center;
+.frame2-box {
+  background: url('./images/320x50_frame2_box.png') no-repeat center center;
   -webkit-animation: fadeIn 0.75s ease-in-out 3.25s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 3.25s forwards;
   animation: fadeIn 0.75s ease-in-out 3.25s forwards;
 }
-.frame2-container {
-  -webkit-animation: fadeOut 0.01s ease-in-out 5.5s forwards;
-  -moz-animation: fadeOut 0.01s ease-in-out 5.5s forwards;
-  animation: fadeOut 0.01s ease-in-out 5.5s forwards;
+.frame2-text1 {
+  background: url('./images/320x50_frame2_text1.png') no-repeat center center;
+  -webkit-animation: fadeIn 0.75s ease-in-out 3.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 3.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 3.25s forwards;
 }
-
+.frame2-text1-container {
+  -webkit-animation: fadeOut 0.75s ease-in-out 5s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 5s forwards;
+  animation: fadeOut 0.75s ease-in-out 5s forwards;
+}
+.frame2-text2 {
+  background: url('./images/320x50_frame2_text2.png') no-repeat center center;
+  -webkit-animation: fadeIn 0.75s ease-in-out 5.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 5.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 5.25s forwards;
+}
+.frame2-text2-container {
+  -webkit-animation: fadeOut 0.75s ease-in-out 7s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 7s forwards;
+  animation: fadeOut 0.75s ease-in-out 7s forwards;
+}
+.frame2-text3 {
+  background: url('./images/320x50_frame2_text3.png') no-repeat center center;
+  -webkit-animation: fadeIn 0.75s ease-in-out 7.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 7.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 7.25s forwards;
+}
+.frame2-text3-container {
+  -webkit-animation: fadeOut 0.75s ease-in-out 9s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 9s forwards;
+  animation: fadeOut 0.75s ease-in-out 9s forwards;
+}
+.frame2-text4 {
+  background: url('./images/320x50_frame2_text4.png') no-repeat center center;
+  -webkit-animation: fadeIn 0.75s ease-in-out 9.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 9.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 9.25s forwards;
+}
+.frame2-text4-container {
+  -webkit-animation: fadeOut 0.75s ease-in-out 11s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 11s forwards;
+  animation: fadeOut 0.75s ease-in-out 11s forwards;
+}
+.frame2-text5 {
+  background: url('./images/320x50_frame2_text5.png') no-repeat center center;
+  -webkit-animation: fadeIn 0.75s ease-in-out 11.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 11.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 11.25s forwards;
+}
+.frame2-container {
+  -webkit-animation: fadeOut 0.01s ease-in-out 13s forwards;
+  -moz-animation: fadeOut 0.01s ease-in-out 13s forwards;
+  animation: fadeOut 0.01s ease-in-out 13s forwards;
+}
 .frame3-hand {
   background: url('./images/320x50_frame3_hand.png') no-repeat center center;
   width: 59px;
   height: 41px;
   top: 0;
   left: 0;
-  -webkit-animation: fadeIn 0.05s ease-in-out 5.5s forwards;
-  -moz-animation: fadeIn 0.05s ease-in-out 5.5s forwards;
-  animation: fadeIn 0.05s ease-in-out 5.5s forwards;
+  -webkit-animation: fadeIn 0.05s ease-in-out 13s forwards;
+  -moz-animation: fadeIn 0.05s ease-in-out 13s forwards;
+  animation: fadeIn 0.05s ease-in-out 13s forwards;
 }
 .frame3-hand-container {
   width: 59px;
@@ -443,9 +492,9 @@
   right: 0;
   bottom: 4px;
 
-  -webkit-animation: slideRight 0.75s ease-in-out 6s forwards;
-  -moz-animation: slideRight 0.75s ease-in-out 6s forwards;
-  animation: slideRight 0.75s ease-in-out 6s forwards;
+  -webkit-animation: slideRight 0.75s ease-in-out 13.5s forwards;
+  -moz-animation: slideRight 0.75s ease-in-out 13.5s forwards;
+  animation: slideRight 0.75s ease-in-out 13.5s forwards;
 }
 
 .frame3-piece0 {
@@ -455,9 +504,9 @@
   bottom: 0;
   left: 179px;
 
-  -webkit-animation: zoomOut 0.5s ease-in-out 5.5s forwards;
-  -moz-animation: zoomOut 0.5s ease-in-out 5.5s forwards;
-  animation: zoomOut 0.5s ease-in-out 5.5s forwards;
+  -webkit-animation: zoomOut 0.5s ease-in-out 13s forwards;
+  -moz-animation: zoomOut 0.5s ease-in-out 13s forwards;
+  animation: zoomOut 0.5s ease-in-out 13s forwards;
 }
 .frame3-piece1 {
   background: url('./images/320x50_frame3_piece1.png') no-repeat center center;
@@ -465,9 +514,9 @@
   height: 5px;
   top: 9px;
   left: 216px;
-  -webkit-animation: flyTopRight 0.5s ease-in-out 5.5s forwards;
-  -moz-animation: flyTopRight 0.5s ease-in-out 5.5s forwards;
-  animation: flyTopRight 0.5s ease-in-out 5.5s forwards;
+  -webkit-animation: flyTopRight 0.5s ease-in-out 13s forwards;
+  -moz-animation: flyTopRight 0.5s ease-in-out 13s forwards;
+  animation: flyTopRight 0.5s ease-in-out 13s forwards;
 }
 .frame3-piece2 {
   background: url('./images/320x50_frame3_piece2.png') no-repeat center center;
@@ -475,9 +524,9 @@
   height: 6px;
   top: 0px;
   left: 195px;
-  -webkit-animation: flyTop 0.5s ease-in-out 5.5s forwards;
-  -moz-animation: flyTop 0.5s ease-in-out 5.5s forwards;
-  animation: flyTop 0.5s ease-in-out 5.5s forwards;
+  -webkit-animation: flyTop 0.5s ease-in-out 13s forwards;
+  -moz-animation: flyTop 0.5s ease-in-out 13s forwards;
+  animation: flyTop 0.5s ease-in-out 13s forwards;
 }
 .frame3-piece3 {
   background: url('./images/320x50_frame3_piece3.png') no-repeat center center;
@@ -485,15 +534,15 @@
   height: 10px;
   top: 7px;
   left: 169px;
-  -webkit-animation: flyTopLeft 0.5s ease-in-out 5.5s forwards;
-  -moz-animation: flyTopLeft 0.5s ease-in-out 5.5s forwards;
-  animation: flyTopLeft 0.5s ease-in-out 5.5s forwards;
+  -webkit-animation: flyTopLeft 0.5s ease-in-out 13s forwards;
+  -moz-animation: flyTopLeft 0.5s ease-in-out 13s forwards;
+  animation: flyTopLeft 0.5s ease-in-out 13s forwards;
 }
 .frame3-container {}
 
 .frame4 {
   background: url('./images/320x50_frame4.png') no-repeat center center;
-  -webkit-animation: fadeIn 0.75s ease-in-out 6.75s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 6.75s forwards;
-  animation: fadeIn 0.75s ease-in-out 6.75s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 14.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 14.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 14.25s forwards;
 }
