--- a/2017/2017-03/2017-03-29/source/728x90.css
+++ b/2017/2017-03/2017-03-29/source/728x90.css
@@ -357,35 +357,35 @@
   }
 }
 
-/*-- slide right  --*/
-@-webkit-keyframes slideRight {
+/*-- slide down  --*/
+@-webkit-keyframes slideDown {
   0%   {
     visibility: visible;
     -webkit-transform: translate(0, 0);
   }
   100% { 
     visibility: visible;
-    -webkit-transform: translate(100%, 0);
+    -webkit-transform: translate(0, 100%);
   }
 }
-@-moz-keyframes slideRight {
+@-moz-keyframes slideDown {
   0%   {
     visibility: visible;
     -moz-transform: translate(0, 0);
   }
   100% { 
     visibility: visible;
-    -moz-transform: translate(100%, 0);
+    -moz-transform: translate(0, 100%);
   }
 }
-@keyframes slideRight {
+@keyframes slideDown {
   0%   {
     visibility: visible;
     transform: translate(0, 0);
   }
   100% { 
     visibility: visible;
-    transform: translate(100%, 0);
+    transform: translate(0, 100%);
   }
 }
 
@@ -480,104 +480,155 @@
   animation: fadeOut 0.75s ease-in-out 2.75s forwards;
 }
 
-.frame2 {
-  background: url('./images/728x90_frame2.png') no-repeat center center;
+.frame2-box {
+  background: url('./images/728x90_frame2_box.png') no-repeat center center;
   -webkit-animation: fadeIn 0.75s ease-in-out 3.25s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 3.25s forwards;
   animation: fadeIn 0.75s ease-in-out 3.25s forwards;
 }
+.frame2-text1 {
+  background: url('./images/728x90_frame2_text1.png') no-repeat center center;
+  -webkit-animation: fadeIn 0.75s ease-in-out 3.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 3.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 3.25s forwards;
+}
+.frame2-text1-container {
+  -webkit-animation: fadeOut 0.75s ease-in-out 5s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 5s forwards;
+  animation: fadeOut 0.75s ease-in-out 5s forwards;
+}
+.frame2-text2 {
+  background: url('./images/728x90_frame2_text2.png') no-repeat center center;
+  -webkit-animation: fadeIn 0.75s ease-in-out 5.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 5.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 5.25s forwards;
+}
+.frame2-text2-container {
+  -webkit-animation: fadeOut 0.75s ease-in-out 7s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 7s forwards;
+  animation: fadeOut 0.75s ease-in-out 7s forwards;
+}
+.frame2-text3 {
+  background: url('./images/728x90_frame2_text3.png') no-repeat center center;
+  -webkit-animation: fadeIn 0.75s ease-in-out 7.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 7.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 7.25s forwards;
+}
+.frame2-text3-container {
+  -webkit-animation: fadeOut 0.75s ease-in-out 9s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 9s forwards;
+  animation: fadeOut 0.75s ease-in-out 9s forwards;
+}
+.frame2-text4 {
+  background: url('./images/728x90_frame2_text4.png') no-repeat center center;
+  -webkit-animation: fadeIn 0.75s ease-in-out 9.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 9.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 9.25s forwards;
+}
+.frame2-text4-container {
+  -webkit-animation: fadeOut 0.75s ease-in-out 11s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 11s forwards;
+  animation: fadeOut 0.75s ease-in-out 11s forwards;
+}
+.frame2-text5 {
+  background: url('./images/728x90_frame2_text5.png') no-repeat center center;
+  -webkit-animation: fadeIn 0.75s ease-in-out 11.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 11.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 11.25s forwards;
+}
+
 .frame2-container {
-  -webkit-animation: fadeOut 0.01s ease-in-out 5.5s forwards;
-  -moz-animation: fadeOut 0.01s ease-in-out 5.5s forwards;
-  animation: fadeOut 0.01s ease-in-out 5.5s forwards;
+  -webkit-animation: fadeOut 0.01s ease-in-out 13s forwards;
+  -moz-animation: fadeOut 0.01s ease-in-out 13s forwards;
+  animation: fadeOut 0.01s ease-in-out 13s forwards;
 }
 
 .frame3-hand {
   background: url('./images/728x90_frame3_hand.png') no-repeat center center;
-  width: 110px;
-  height: 85px;
+  width: 57px;
+  height: 23px;
   top: 0;
   left: 0;
-  -webkit-animation: fadeIn 0.05s ease-in-out 5.5s forwards;
-  -moz-animation: fadeIn 0.05s ease-in-out 5.5s forwards;
-  animation: fadeIn 0.05s ease-in-out 5.5s forwards;
+  -webkit-animation: fadeIn 0.05s ease-in-out 13s forwards;
+  -moz-animation: fadeIn 0.05s ease-in-out 13s forwards;
+  animation: fadeIn 0.05s ease-in-out 13s forwards;
 }
 .frame3-hand-container {
-  width: 110px;
-  height: 85px;
-  right: 0;
+  width: 57px;
+  height: 23px;
+  right: 314px;
   bottom: 0px;
 
-  -webkit-animation: slideRight 0.75s ease-in-out 6s forwards;
-  -moz-animation: slideRight 0.75s ease-in-out 6s forwards;
-  animation: slideRight 0.75s ease-in-out 6s forwards;
+  -webkit-animation: slideDown 0.75s ease-in-out 13.5s forwards;
+  -moz-animation: slideDown 0.75s ease-in-out 13.5s forwards;
+  animation: slideDown 0.75s ease-in-out 13.5s forwards;
 }
 .frame3-piece0 {
   background: url('./images/728x90_frame3_piece0.png') no-repeat center center;
   width: 50px;
   height: 49px;
   top: 26px;
-  right: 137px;
+  right: 317px;
 
-  -webkit-animation: zoomOut 0.5s ease-in-out 5.5s forwards;
-  -moz-animation: zoomOut 0.5s ease-in-out 5.5s forwards;
-  animation: zoomOut 0.5s ease-in-out 5.5s forwards;
+  -webkit-animation: zoomOut 0.5s ease-in-out 13s forwards;
+  -moz-animation: zoomOut 0.5s ease-in-out 13s forwards;
+  animation: zoomOut 0.5s ease-in-out 13s forwards;
 }
 .frame3-piece1 {
   background: url('./images/728x90_frame3_piece1.png') no-repeat center center;
   width: 8px;
   height: 11px;
   top: 5px;
-  right: 199px;
-  -webkit-animation: flyTopLeft 0.5s ease-in-out 5.5s forwards;
-  -moz-animation: flyTopLeft 0.5s ease-in-out 5.5s forwards;
-  animation: flyTopLeft 0.5s ease-in-out 5.5s forwards;
+  right: 379px;
+  -webkit-animation: flyTopLeft 0.5s ease-in-out 13s forwards;
+  -moz-animation: flyTopLeft 0.5s ease-in-out 13s forwards;
+  animation: flyTopLeft 0.5s ease-in-out 13s forwards;
 }
 .frame3-piece2 {
   background: url('./images/728x90_frame3_piece2.png') no-repeat center center;
   width: 12px;
   height: 9px;
   top: 41px;
-  right: 210px;
-  -webkit-animation: flyLeft 0.5s ease-in-out 5.5s forwards;
-  -moz-animation: flyLeft 0.5s ease-in-out 5.5s forwards;
-  animation: flyLeft 0.5s ease-in-out 5.5s forwards;
+  right: 390px;
+  -webkit-animation: flyLeft 0.5s ease-in-out 13s forwards;
+  -moz-animation: flyLeft 0.5s ease-in-out 13s forwards;
+  animation: flyLeft 0.5s ease-in-out 13s forwards;
 }
 .frame3-piece3 {
   background: url('./images/728x90_frame3_piece3.png') no-repeat center center;
   width: 15px;
   height: 14px;
-  right: 194px;
+  right: 374px;
   bottom: 0;
-  -webkit-animation: flyBottomLeft 0.5s ease-in-out 5.5s forwards;
-  -moz-animation: flyBottomLeft 0.5s ease-in-out 5.5s forwards;
-  animation: flyBottomLeft 0.5s ease-in-out 5.5s forwards;
+  -webkit-animation: flyBottomLeft 0.5s ease-in-out 13s forwards;
+  -moz-animation: flyBottomLeft 0.5s ease-in-out 13s forwards;
+  animation: flyBottomLeft 0.5s ease-in-out 13s forwards;
 }
 .frame3-piece4 {
   background: url('./images/728x90_frame3_piece4.png') no-repeat center center;
   width: 18px;
   height: 18px;
-  right: 108px;
+  right: 288px;
   bottom: 1px;
-  -webkit-animation: flyBottomRight 0.5s ease-in-out 5.5s forwards;
-  -moz-animation: flyBottomRight 0.5s ease-in-out 5.5s forwards;
-  animation: flyBottomRight 0.5s ease-in-out 5.5s forwards;
+  -webkit-animation: flyBottomRight 0.5s ease-in-out 13s forwards;
+  -moz-animation: flyBottomRight 0.5s ease-in-out 13s forwards;
+  animation: flyBottomRight 0.5s ease-in-out 13s forwards;
 }
 .frame3-piece5 {
   background: url('./images/728x90_frame3_piece5.png') no-repeat center center;
   width: 18px;
   height: 13px;
   top: 17px;
-  right: 110px;
-  -webkit-animation: flyTopRight 0.5s ease-in-out 5.5s forwards;
-  -moz-animation: flyTopRight 0.5s ease-in-out 5.5s forwards;
-  animation: flyTopRight 0.5s ease-in-out 5.5s forwards;
+  right: 290px;
+  -webkit-animation: flyTopRight 0.5s ease-in-out 13s forwards;
+  -moz-animation: flyTopRight 0.5s ease-in-out 13s forwards;
+  animation: flyTopRight 0.5s ease-in-out 13s forwards;
 }
 .frame3-container {}
 
 .frame4 {
   background: url('./images/728x90_frame4.png') no-repeat center center;
-  -webkit-animation: fadeIn 0.75s ease-in-out 6.75s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 6.75s forwards;
-  animation: fadeIn 0.75s ease-in-out 6.75s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 14.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 14.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 14.25s forwards;
 }
