Use tween max for creating animation with svg mask

--- a/2017/2017-04/2017-04-14/source/300x250.css
+++ b/2017/2017-04/2017-04-14/source/300x250.css
@@ -353,9 +353,11 @@
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
 #mask-rect {
+  /*
   -webkit-animation: moveMaskSvg 2s ease-in-out 3.75s forwards;
   -moz-animation: moveMaskSvg 2s ease-in-out 3.75s forwards;
   animation: moveMaskSvg 2s ease-in-out 3.75s forwards;
+  */
 }
 
 .leaves {
