--- a/2017/2017-04/2017-04-14/source/160x600.css
+++ b/2017/2017-04/2017-04-14/source/160x600.css
@@ -316,6 +316,10 @@
   height: 410px;
   left: 0px;
   bottom: 0px;
+
+  -webkit-animation: hidden 10ms ease-in-out 0s forwards;
+  -moz-animation: hidden 10ms ease-in-out 0s forwards;
+  animation: hidden 10ms ease-in-out 0s forwards; 
 }
 
 .chameleon-mask {
@@ -335,9 +339,9 @@
   background: url('./images/160x600_leaves.png') no-repeat center center;
   z-index: 5;
   width: 160px;
-  height: 229px;
+  height: 252px;
   left: 0px;
-  bottom: 14px;
+  bottom: 0px;
 
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
@@ -346,10 +350,10 @@
 
 .logo {
   background: url('./images/160x600_logo.png') no-repeat center center;
-  width: 102px;
-  height: 20px;
+  width: 112px;
+  height: 22px;
   top: 24px;
-  left: 26px;
+  left: 23px;
   z-index: 5;
 
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
@@ -365,9 +369,9 @@
   left: 28px;
   z-index: 5;
 
-  -webkit-animation: fadeIn 0.75s ease-in-out 6.25s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 6.25s forwards;
-  animation: fadeIn 0.75s ease-in-out 6.25s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 3.75s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 3.75s forwards;
+  animation: fadeIn 0.75s ease-in-out 3.75s forwards;
 }
 
 .cta {
