--- a/2017/2017-04/2017-04-20/source/fr/728x90_fr.css
+++ b/2017/2017-04/2017-04-20/source/fr/728x90_fr.css
@@ -209,6 +209,85 @@
   }
 }
 
+/*-- slide left right --*/
+@-webkit-keyframes slideLeftRight {
+  0%   {
+    -webkit-transform: translate(0, 0);
+  }
+  6.25%, 18.75% { 
+    -webkit-transform: translate(-340px, 0);
+  }
+  25%, 31.25%   {
+    -webkit-transform: translate(0, 0);
+  }
+  37.5%, 50% { 
+    -webkit-transform: translate(-340px, 0);
+  }
+  56.25%, 62.5%   {
+    -webkit-transform: translate(0, 0);
+  }
+  68.75%, 81.25% { 
+    -webkit-transform: translate(-340px, 0);
+  }
+  87.5%, 93.75%   {
+    -webkit-transform: translate(0, 0);
+  }
+  100% { 
+    -webkit-transform: translate(-340px, 0);
+  }
+}
+@-moz-keyframes slideLeftRight {
+  0%   {
+    -moz-transform: translate(0, 0);
+  }
+  6.25%, 18.75% { 
+    -moz-transform: translate(-340px, 0);
+  }
+  25%, 31.25%   {
+    -moz-transform: translate(0, 0);
+  }
+  37.5%, 50% { 
+    -moz-transform: translate(-340px, 0);
+  }
+  56.25%, 62.5%   {
+    -moz-transform: translate(0, 0);
+  }
+  68.75%, 81.25% { 
+    -moz-transform: translate(-340px, 0);
+  }
+  87.5%, 93.75%   {
+    -moz-transform: translate(0, 0);
+  }
+  100% { 
+    -moz-transform: translate(-340px, 0);
+  }
+}
+@keyframes slideLeftRight {
+  0%   {
+    transform: translate(0, 0);
+  }
+  6.25%, 18.75% { 
+    transform: translate(-340px, 0);
+  }
+  25%, 31.25%   {
+    transform: translate(0, 0);
+  }
+  37.5%, 50% { 
+    transform: translate(-340px, 0);
+  }
+  56.25%, 62.5%   {
+    transform: translate(0, 0);
+  }
+  68.75%, 81.25% { 
+    transform: translate(-340px, 0);
+  }
+  87.5%, 93.75%   {
+    transform: translate(0, 0);
+  }
+  100% { 
+    transform: translate(-340px, 0);
+  }
+}
 
 /*-------------------------------------------*/
 * {
@@ -263,11 +342,61 @@
   animation: hideContent 10ms ease-in-out 0s forwards; 
 }
 
-.background {
-  background: url('./images/728x90_fr_bg.jpg') no-repeat center center;
-  -webkit-animation: fadeInLeft 0.75s ease-in-out 0.5s forwards;
-  -moz-animation: fadeInLeft 0.75s ease-in-out 0.5s forwards;
-  animation: fadeInLeft 0.75s ease-in-out 0.5s forwards;
+.closet0 {
+  background: url('./images/728x90_fr_closet0.jpg') no-repeat center center;
+  -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
+  -moz-animation: hideContent 10ms ease-in-out 0s forwards;
+  animation: hideContent 10ms ease-in-out 0s forwards;
+}
+.closet1 {
+  background: url('./images/728x90_fr_closet1.jpg') no-repeat center center;
+  -webkit-animation: fadeIn 0.1s ease-in-out 1.25s forwards;
+  -moz-animation: fadeIn 0.1s ease-in-out 1.25s forwards;
+  animation: fadeIn 0.1s ease-in-out 1.25s forwards;
+}
+.closet2 {
+  background: url('./images/728x90_fr_closet2.jpg') no-repeat center center;
+  -webkit-animation: fadeIn 0.1s ease-in-out 3.75s forwards;
+  -moz-animation: fadeIn 0.1s ease-in-out 3.75s forwards;
+  animation: fadeIn 0.1s ease-in-out 3.75s forwards;
+}
+.closet3 {
+  background: url('./images/728x90_fr_closet3.jpg') no-repeat center center;
+  -webkit-animation: fadeIn 0.1s ease-in-out 6.25s forwards;
+  -moz-animation: fadeIn 0.1s ease-in-out 6.25s forwards;
+  animation: fadeIn 0.1s ease-in-out 6.25s forwards;
+}
+.closet4 {
+  background: url('./images/728x90_fr_closet4.jpg') no-repeat center center;
+  -webkit-animation: fadeIn 0.1s ease-in-out 8.75s forwards;
+  -moz-animation: fadeIn 0.1s ease-in-out 8.75s forwards;
+  animation: fadeIn 0.1s ease-in-out 8.75s forwards;
+}
+.door-down-container {
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+}
+.door-down {
+  background: url('./images/728x90_fr_door_down.png') no-repeat center center;
+  width: 359px;
+  height: 90px;
+  top: 0px;
+  left: 335px;
+  -webkit-animation: slideLeftRight 8s ease-in-out 1.75s forwards;
+  -moz-animation: slideLeftRight 8s ease-in-out 1.75s forwards;
+  animation: slideLeftRight 8s ease-in-out 1.75s forwards;
+}
+.door-up {
+  background: url('./images/728x90_fr_door_up.png') no-repeat center center;
+  width: 344px;
+  height: 90px;
+  top: 0px;
+  left: 0px;
+
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
 
 .logo {
@@ -276,10 +405,11 @@
   height: 30px;
   top: 30px;
   left: 30px;
+  z-index: 5;
 
-  -webkit-animation: fadeIn 0.75s ease-in-out 1.25s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 1.25s forwards;
-  animation: fadeIn 0.75s ease-in-out 1.25s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 10.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 10.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 10.25s forwards;
 }
 
 .text {
@@ -288,10 +418,11 @@
   height: 74px;
   top: 9px;
   left: 180px;
+  z-index: 5;
 
-  -webkit-animation: fadeInDown 0.75s ease-in-out 2.5s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 2.5s forwards;
-  animation: fadeInDown 0.75s ease-in-out 2.5s forwards;
+  -webkit-animation: fadeInDown 0.75s ease-in-out 11.5s forwards;
+  -moz-animation: fadeInDown 0.75s ease-in-out 11.5s forwards;
+  animation: fadeInDown 0.75s ease-in-out 11.5s forwards;
 }
 .cta {
   background: url('./images/728x90_fr_cta.png') no-repeat center center;
@@ -299,7 +430,8 @@
   height: 90px;
   right: 0px;
   bottom: 0px;
+  z-index: 5;
 
-  -webkit-animation: fadeInLeft 0.75s ease-in-out 0.5s forwards;
-  -moz-animation: fadeInLeft 0.75s ease-in-out 0.5s forwards;
-  animation: fadeInLeft 0.75s ease-in-out 0.5s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
